# TwitterClone

./: README.md
.github/workflows/: build.yml
backend/: README.md  banco_backup.sql  pyproject.toml  requirements.txt
backend/TwitterClone/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py  0003_alter_user_password.py
frontend/: package-lock.json  package.json
frontend/TwitterClone/: package-lock.json  package.json
frontend/TwitterClone/public/: index.html
frontend/TwitterClone/src/: App.tsx  routes.tsx  styles.ts
frontend/TwitterClone/src/components/: axiosInstance.tsx
frontend/TwitterClone/src/components/Button/: index.tsx  styles.ts
frontend/TwitterClone/src/components/Input/: index.tsx  styles.ts
frontend/TwitterClone/src/components/Modal/: index.tsx  styles.ts
frontend/TwitterClone/src/components/Post/: index.tsx  styles.ts
frontend/TwitterClone/src/components/ProtectedRoute/: index.tsx
frontend/TwitterClone/src/pages/Home/: index.tsx  styles.ts
frontend/TwitterClone/src/pages/Login/: index.tsx  styles.ts
